--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ ADD_SUBDIRECTORY(googletest EXCLUDE_FROM_ALL)
 AUX_SOURCE_DIRECTORY(. SOURCE)
 ADD_EXECUTABLE(training_main ${SOURCE}
         ../include/Executor.h
-        test.cpp
+        Test.cpp
 )
 TARGET_LINK_LIBRARIES(training_main training gtest_main)
 
